fix alignment of features circle

--- a/styles/style.css
+++ b/styles/style.css
@@ -88,7 +88,7 @@ ORDER: Base + typography > general layout + grid > page layout > components
     --fs-600: 4.8rem;
     --fs-700: 4.8rem;
     --fs-800: 4.8rem;
-    --fs-250: 1.5rem;
+    --fs-250: 1.8rem;
   }
 }
 
@@ -255,7 +255,7 @@ a {
 }
 
 .benefit__title {
-  font-size: var(--fs-250);
+  font-size: 1.8rem;
   font-weight: var(--fw-700);
   color: var(--clr-blue-300);
 }
